# nssm_exec

./: .gitignore  Cargo.toml  README.md  appveyor.yml
config/: logging_nssm_exec.yml  nssm_exec.toml
src/: main.rs
