[package]
name = "nssm_exec"
version = "0.2.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
derive-error-chain = "=0.11.0"
error-chain = "=0.11.0"
file = "=1.1.1"
log = "=0.3.8"
log4rs = "=0.7.0"
serde = "=1.0.16"
serde_derive = "=1.0.16"
simple_logger = "=0.4.0"
structopt = "=0.1.1"
structopt-derive = "=0.1.1"
toml = "=0.4.5"

[[bin]]
name = "nssm_exec"
path = "src/main.rs"
